--- a/homeloans/homeloan/src/main/webapp/WEB-INF/web.xml
+++ b/homeloans/homeloan/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,7 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  
    <servlet>
 		<servlet-name>spring</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -13,4 +14,8 @@
 		<servlet-name>spring</servlet-name>
 		<url-pattern>*.do</url-pattern>
 	</servlet-mapping>
+	
+	<welcome-file-list>  
+  		 <welcome-file>home.jsp</welcome-file>  
+ 	</welcome-file-list>
 </web-app>
